# raca

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  RUN.md  TrashOS.img  build.sh  config.toml  flake.nix  racaOS.img  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  release.yml  release_os.yml  test.yml
.zed/: settings.json
apps/.cargo/: config.toml
apps/caraint/: Cargo.toml
apps/caraint/src/: main.rs
apps/commands/: Cargo.toml
apps/hello1/: Cargo.toml
apps/hello1/src/: main.rs
apps/init/: Cargo.toml
apps/init/src/: main.rs
apps/raca_std/: Cargo.toml
apps/raca_std/src/: debug.rs  error.rs  fs.rs  io.rs  kernel.rs  lib.rs  memory.rs  path.rs  syscall.rs  task.rs
apps/raca_std/src/env/: mod.rs
apps/raca_std/src/process/: mod.rs
apps/raca_std/src/thread/: mod.rs
apps/rash/: Cargo.toml
apps/rash/src/: main.rs  run.rs
apps/shell/: Cargo.toml
apps/shell/src/: main.rs  run.rs
apps/syscall_macro/: Cargo.toml
apps/syscall_macro/src/: lib.rs
builder/: Cargo.toml  initramfs
builder/assets/: bootloongarch64.efi  limine.conf
builder/src/: cargo.rs  cli.rs  image.rs  main.rs
builder/src/commands/: build.rs  clippy.rs  mod.rs  run.rs  test.rs
crates/errors/: Cargo.toml
crates/loongarch64/: Cargo.toml
crates/loongarch64/src/: lib.rs
crates/pod/: Cargo.toml
crates/pod-macros/: Cargo.toml
crates/pod-macros/src/: lib.rs
crates/pod/src/: lib.rs
crates/x2apic/: Cargo.toml
crates/x2apic/src/: lib.rs
errors/src/: lib.rs
esp/: initrd  initrd_fs.km  limine.conf
esp/boot/: initramfs
esp/efi/boot/: bootx64.efi
esp/modules/: hello.km
initramfs/: fib.cara  test.cara  test.txt
initramfs/haha/: test.txt
initramfs/modules/: cracker.km  hello.km  keyboard.km
kernel/: Cargo.toml  linker.ld
kernel/src/: error.rs  lib.rs  main.rs  stack.rs
kernel/src/acpi/: handler.rs  mod.rs
kernel/src/arch/: mem.rs  serial.rs
kernel/src/arch/boot/: mod.rs
kernel/src/arch/context/: switch.asm  task.rs  trap.rs  user.rs
kernel/src/arch/int/: entry.asm
kernel/src/arch/timer/: mod.rs
kernel/src/io/: mod.rs
kernel/src/irq/: mod.rs
kernel/src/mem/: mod.rs  vm_space.rs
kernel/src/mem/vmar/: mapping.rs  mod.rs  pf.rs  rw.rs
kernel/src/mem/vmo/: mod.rs  rw.rs
kernel/src/sync/: cpu_cell.rs
kernel/src/task/: mod.rs
kernel/src/timer/: mod.rs
kernel_hal/: Cargo.toml
kernel_hal/src/: lib.rs  page_table.rs  panic.rs
kernel_hal/src/arch/: error.rs
kernel_hal/src/arch/boot/: entry.asm
kernel_hal/src/arch/context/: mod.rs
kernel_hal/src/arch/int/: mod.rs  trap.rs
kernel_hal/src/arch/loongarch64/: mem.rs  mod.rs  serial.rs  task.rs  trap.rs
kernel_hal/src/arch/loongarch64/task/: mod.rs  task_ctx.rs  user.rs
kernel_hal/src/arch/x86_64/: mod.rs  task.rs  trap.rs
kernel_hal/src/io/: io_mem.rs
kernel_hal/src/libos/: mem.rs  mod.rs
kernel_hal/src/libos/mem/: info.rs  mod.rs
kernel_hal/src/mem/: frame.rs  heap.rs  mod.rs  page_table.rs  physical.rs  vm_space.rs
kernel_hal/src/mem/vmo/: mod.rs
kernel_hal/src/platform/bare/: logger.rs  mod.rs  trap.rs
kernel_hal/src/platform/bare/acpi/: handler.rs  mod.rs  power.rs
kernel_hal/src/platform/bare/mem/: frame.rs  heap.rs  mod.rs
kernel_hal/src/platform/bare/task/: mod.rs  sched.rs
kernel_hal/src/platform/libos/: mod.rs  power.rs
kernel_hal/src/platform/libos/mem/: mod.rs  phys.rs  vm.rs
kernel_hal/src/platform/libos/task/: mod.rs
kernel_hal/src/sync/: mod.rs
kernel_hal/src/task/: exception.rs  mod.rs  user.rs
kernel_hal/src/timer/: mod.rs
kernel_hal_bare/: Cargo.toml
kernel_hal_bare/src/: framebuffer.rs  logger.rs
kernel_hal_bare/src/acpi/: mod.rs
kernel_hal_bare/src/arch/: mem.rs  mod.rs
kernel_hal_bare/src/irq/: mod.rs
kernel_hal_bare/src/mem/: frame.rs  page_table.rs
kernel_hal_bare/src/sync/: cpu_cell.rs
libos_loader/: Cargo.toml
libos_loader/src/: main.rs
loongarch64/src/: addr.rs
loongarch64/src/instructions/: interrupt.rs  mod.rs  tlb.rs
loongarch64/src/registers/: dmw.rs  int.rs  mode.rs  paging.rs
modules/: link.ld  target.json
modules/.cargo/: config.toml
modules/cracker/: Cargo.toml
modules/cracker/src/: main.rs
modules/fat32/: Cargo.toml
modules/fat32/src/: main.rs
modules/hello/src/: main.rs
modules/keyboard/: Cargo.toml
modules/keyboard/src/: main.rs
modules/module_std/: Cargo.toml
object/: Cargo.toml  build.rs
object/src/: error.rs  lib.rs
object/src/ipc/: channel.rs  mod.rs
object/src/mem/: mod.rs
object/src/mem/vmar/: mapping.rs  mod.rs  pf.rs  rw.rs
object/src/mem/vmo/: mod.rs  rw.rs
object/src/object/: handle.rs  mod.rs  obj.rs  rights.rs
object/src/task/: exception.rs  mod.rs  process.rs  thread.rs
object/src/task/process/: mod.rs  vdso.rs
raca_core/: Cargo.toml  build.rs
raca_core/src/: error.rs  lib.rs  main.rs
raca_core/src/arch/: acpi.rs  apic.rs  gdt.rs  interrupts.rs  mod.rs  smp.rs
raca_core/src/device/: beeper.rs  display.rs  hpet.rs  mod.rs  terminal.rs
raca_core/src/fs/: mod.rs  ramfs.rs  root.rs
raca_core/src/fs/dev/: mod.rs  null.rs  terminal.rs
raca_core/src/fs/operation/: kernel.rs  mod.rs  user.rs
raca_core/src/fs/proc/: cmd_line.rs  mod.rs
raca_core/src/fs/vfs/: file.rs  inode.rs  mod.rs  path.rs
raca_core/src/memory/: bitmap.rs  frame.rs  kernel_heap.rs  manager.rs  mod.rs  page_table.rs
raca_core/src/module/: load.rs  mod.rs  operations.rs  probe.rs
raca_core/src/syscall/: consts.rs  debug.rs  fs.rs  kernel.rs  memory.rs  mod.rs  task.rs
raca_core/src/task/: context.rs  dynamic_linker.rs  mod.rs  process.rs  scheduler.rs  signal.rs  stack.rs  thread.rs  timer.rs
syscall/: Cargo.toml
syscall/src/: debug.rs  handle.rs  ipc.rs  lib.rs  task.rs  vm.rs
user/protocol/: Cargo.toml
user/terminal/: Cargo.toml
user/user_boot/: Cargo.toml
user/user_boot/src/: main.rs  terminal.rs
user/user_boot/src/kbd/: mod.rs
user/user_boot/src/pcie/: mod.rs
user/ustd/: Cargo.toml  build.rs
vdso/: syscalls.rs
vdso/vdso/: Cargo.toml  build.rs
vdso/vdso_dylib/: Cargo.toml  build.rs  linker.ld
(+56 files in other folders)
