[workspace]
members = ["builder", "loongarch64", "kernel", "object", "kernel_hal", "kernel_hal_bare", "errors", "libos_loader"]
default-members = ["libos_loader"]
resolver = "3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
lto = "thin"

[workspace.dependencies]
log = "0.4.28"
spin = "0.10.0"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
