[workspace]
members = [
    "builder", 
    "crates/loongarch64", 
    "kernel", 
    "object", 
    "kernel_hal", 
    "crates/errors", 
    "user/ustd", 
    "syscall",
    "user/protocol", 
    "user/user_boot", 
    "crates/pod", 
    "crates/pod-macros",
]
default-members = ["builder"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
lto = "thin"

[workspace.dependencies]
log = "0.4.28"
spin = "0.10.0"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
errors = { path = "./crates/errors" }
ustd = { path = "./user/ustd" }
zerocopy = { version = "0.8.39", features = ["derive"] }
pod = { path = "./crates/pod" }
