[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[dependencies]
elf = { version = "0.8.0", default-features = false }
errors.workspace = true
kernel_hal = { path = "../kernel_hal" }
limine = "0.5.0"
log.workspace = true
object = { path = "../object", default-features = false }
pod.workspace = true
protocol = { version = "0.2.0", path = "../user/protocol" }
syscall = { path = "../syscall" }
