[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[dependencies]
errors.workspace = true
goblin.workspace = true
kernel_hal = { path = "../kernel_hal" }
limine = "0.5.0"
log.workspace = true
object = { path = "../object", default-features = false }
pod.workspace = true
protocol = { path = "../user/protocol" }
syscall = { path = "../syscall" }
