[package]
name = "kernel_hal"
version.workspace = true
edition.workspace = true

[dependencies]
bit_field = "0.10.3"
bitflags = "2.10.0"
errors = { version = "0.1.0", path = "../errors" }
humansize = "2.1.3"
log.workspace = true
spin.workspace = true
tempfile = { version = "3.24.0", optional = true }
tokio = { workspace = true, optional = true }
limine = { version = "0.5.0" }
good_memory_allocator = "0.1.7"
acpi = "6.1.0"
pastey = "0.2.1"

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongarch64 = { path = "../loongarch64" }

[dependencies.nix]
version = "0.31.1"
optional = true
features = ["fs", "mman"]

[features]
default = []
libos = ["dep:nix", "dep:tempfile", "dep:tokio"]
