[package]
name = "object"
version.workspace = true
edition.workspace = true

[dependencies]
bitflags = "2.10.0"
downcast-rs = { version = "2.0.2", default-features = false, features = ["sync"] }
elf = { version = "0.8.0", default-features = false }
errors = { version = "0.1.0", path = "../errors" }
kernel_hal = { version = "0.1.0", path = "../kernel_hal", default-features = false }
log.workspace = true
spin.workspace = true

[features]
default = []
libos = ["kernel_hal/libos"]
