[package]
name = "object"
version.workspace = true
edition.workspace = true

[dependencies]
bitflags = "2.10.0"
downcast-rs = { version = "2.0.2", default-features = false, features = ["sync"] }
errors.workspace = true
kernel_hal = { path = "../kernel_hal", default-features = false }
log.workspace = true
pod.workspace = true
spin.workspace = true
zerocopy.workspace = true

[features]
default = []
libos = ["kernel_hal/libos"]
