cargo-features = ["per-package-target"]

[package]
name = "raca_core"
version = "16.0.0"
edition = "2021"
forced-target = "x86_64-unknown-none"

[dependencies]
x86_64 = {git="https://github.com/rust-osdev/x86_64"}
bit_field = "0.10.2"
spin = "0.9.8"
talc = "4.4.1"
good_memory_allocator = "0.1.7"
uart_16550 = "0.3.1"
acpi = "5.0.0"
x2apic = { path = "../crates/x2apic"}
numeric-enum-macro = "0.2.0"
cpio_reader = "0.1.1"
aml = "0.16.4"


[dependencies.os-terminal]
version = "0.5.2"
features = ["truetype"]

[dependencies.goblin]
version = "0.9.1"
default-features = false
features = ["elf64","elf32","endian_fd"]

[dependencies.object]
version = "0.36.4"
features = ["read_core", "elf", "unaligned", ]
default-features = false

[dependencies.log]
version = "0.4.22"
default-features = false

[dependencies.limine]
version = "0.3.1"
features = ["uuid"]
