[package]
name = "raca_std"
version = "0.1.0"
edition = "2024"
description = "Rust standard library for racaOS"
repository = "https://github.com/zzjrabbit/racaOS"
license = "MIT"
categories = ["os"]
keywords = ["os", "raca", "racaos", "std", "app"]

[dependencies]
syscall_macro = { path = "../syscall_macro" }
spin = "0.9.8"
talc = "4.4.2"
unwinding = { version = "0.2", default-features = false, features = [
    "unwinder",
    "fde-static",
    "personality",
    "panic",
    "dwarf-expr",
    "hide-trace",
] }
rustc-demangle = "0.1"
