[package]
name = "syscall_macro"
version = "0.1.0"
edition = "2021"
description = "macros for syscalls in x86_64"
license = "MIT"
repository = "https://github.com/zzjrabbit/racaOS"
categories = ["no_std","syscall","x86_64"]
keywords = ["no_std","syscall","x86_64"]

[lib]
proc-macro = true

[dependencies]
syn = {version="2.0.87",features=["full","fold"]}
quote = "1.0.8"
proc-macro2 = "1.0.89"
